# rivulet

./: README.md  example.py  pyproject.toml
rivulet/: __init__.py  batch.py  pipeline.py
rivulet/tests/: test_batch.py  test_core.py  test_pipeline.py
