[project]
name = "rivulet"
version = "0.1.0"
description = "Lightweight asynchronous data streams"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Yuval Adam", email = "_@yuv.al"},
]
requires-python = ">=3.8"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
]
